trunk/Archive2/df/e302e87d66e36c/output
main.cpp:14:5: error: no matching function for call to 'print_result'
    print_result(f, 1);
    ^~~~~~~~~~~~
main.cpp:7:42: note: candidate template ignored: couldn't infer template argument 'Func'
template<typename Func, typename T> void print_result(Func f, T arg) 
                                         ^
1 error generated.
